# tetris-terminal

./: .gitignore  LICENSE  README-cn.md  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/pytris/: cli.py  pytris.py
src/tetris/: __init__.py  cli.py  log.py  tetris.py  tetris_moden.py  tetris_modern.py
