[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris-terminal"
version = "0.1.0"
description = "A tetris game runs in the terminal"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "MIT" }

authors = [{ name = "jayzhu", email = "jay.l.zhu@foxmail.com" }]

dependencies = ["windows-curses; sys_platform == 'win32'"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Terminals",
]

[project.urls]
homepage = "https://github.com/zlh124/tetris-terminal"

[project.scripts]
tetris = "tetris.cli:main"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["*.md"]
